--- a/views/error.ejs
+++ b/views/error.ejs
@@ -26,7 +26,7 @@
     <h1>Something went wrong</h1>
     <p><%= message %></p>
 
-    <% if (error.stack) { %>
+    <% if (error && error.stack) { %>
       <pre><%= error.stack %></pre>
     <% } %>
 
